--- a/assessment.html
+++ b/assessment.html
@@ -5,7 +5,7 @@
   <meta name="twitter:card" content="summary" />
   <meta
         property="og:url" 
-        content=https://suzukaze0229.github.io/assessment/assessment.html
+        content=https://github.com/suzukaze0229/assessment/blob/gh-pages/assessment.html
         />
   <meta property="og:title" content="あなたのいいところ診断" />
   <meta 
